2016-11-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39805: Src/Zle/comp.h, Src/Zle/compcore.c: internal: Document
	some compadd internals.

	* 39804: Src/Zle/comp.h, Src/Zle/complete.c: internal: Document
	matchspec flags.

	* 39803: Src/Zle/complete.c: internal: Document bin_compadd().

	* 39802: Src/Zle/compcore.c, Src/Zle/complete.c: internal:
	Document and simplify multiquote().

	* users/22063: Doc/Zsh/zle.yo: bracketed-paste: Document ability
	to specify a vi register. (after users/22036)

2016-11-03  Daniel Hahler  <zsh@thequod.de>
	* 39822: Completion/Unix/Command/_git: remove "-A '-*'" with
	_arguments for some commands.

2016-11-03  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Completion/Unix/Type/_remote_files: fix typo that
	was causing handling of "--" argument to fail

	* 39820: Src/Zle/zle_vi.c: vi-repeat handles multi-key bindings

2016-11-03  Peter Stephenson  <p.stephenson@samsung.com>

	* 39815: Src/lex.c, Test/D04parameter.ztst: read input to end
	on parse error in $(...) inside a string.

2016-11-02  Barton E. Schaefer  <schaefer@zsh.org>

	* 39813: Src/Zle/zle_keymap.c: fix keybuflen after ungetting
	extra keys from the end of keybuf in getkeymapcmd().

	* 39811: Src/Zle/zle_vi.c: vi-repeat-change must not be the
	"motion" of vi-change, lest it infinitely repeat itself.

2016-11-01  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 39731: Completion/Unix/Command/_awk: add support for gawk
	ver.3 and 4

2016-11-01  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39787: Test/Y01completion.ztst: Add a regression test for
	39412.

2016-10-31  Barton E. Schaefer  <schaefer@zsh.org>

	* 39797: Completion/Unix/Type/_canonical_paths: obsolete the
	helper functions fixed by the previous two changes, replacing
	them with the new ${var:P} modifier.

	* 39795: Completion/Unix/Type/_canonical_paths: preserve "cd -"
	behavior around directory shuffling in _canonical_paths_pwd

	* 39792: Completion/Unix/Type/_canonical_paths: improve handling